Fix foote'sr position on smaller screens

--- a/index.css
+++ b/index.css
@@ -68,7 +68,10 @@ footer {
   color: #fff;
   position: absolute;
   bottom: 0;
-  text-align: center;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   padding: 40px;
 }
